Parser/ArabicWebParser.py
# Generated from ArabicWebParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ArabicWebParser ( Parser ):

    grammarFileName = "ArabicWebParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\u0639\\u0631\\u0636'", "'\\u0645\\u0648\\u0642\\u0639'", 
                     "'\\u0639\\u0631\\u0636-\\u0627\\u0644\\u0645\\u0633\\u0627\\u062D\\u0629'", 
                     "'\\u0637\\u0648\\u0644-\\u0627\\u0644\\u0645\\u0633\\u0627\\u062D\\u0629'", 
                     "'\\u0623\\u0642\\u0635\\u0649-\\u0639\\u0631\\u0636'", 
                     "'\\u0623\\u0642\\u0644-\\u0639\\u0631\\u0636'", "'\\u0623\\u0642\\u0635\\u0649-\\u0637\\u0648\\u0644'", 
                     "'\\u0623\\u0642\\u0644-\\u0637\\u0648\\u0644'", "'\\u0647\\u0627\\u0645\\u0634'", 
                     "'\\u062D\\u0634\\u0648'", "'\\u0625\\u0637\\u0627\\u0631'", 
                     "'\\u0627\\u0644\\u0638\\u0647\\u0648\\u0631'", "'\\u0641\\u0627\\u0626\\u0636'", 
                     "'\\u062A\\u0631\\u062A\\u064A\\u0628-\\u0627\\u0644\\u0639\\u0645\\u0642'", 
                     "'\\u062A\\u062D\\u062C\\u064A\\u0645-\\u0627\\u0644\\u0635\\u0646\\u062F\\u0648\\u0642'", 
                     "'\\u0645\\u0631\\u0646'", "'\\u0627\\u062A\\u062C\\u0627\\u0647-\\u0627\\u0644\\u0645\\u0631\\u0648\\u0646\\u0629'", 
                     "'\\u0644\\u0641-\\u0627\\u0644\\u0645\\u0631\\u0648\\u0646\\u0629'", 
                     "'\\u0646\\u0645\\u0648-\\u0627\\u0644\\u0645\\u0631\\u0648\\u0646\\u0629'", 
                     "'\\u0627\\u0646\\u0643\\u0645\\u0627\\u0634-\\u0627\\u0644\\u0645\\u0631\\u0648\\u0646\\u0629'", 
                     "'\\u0634\\u0628\\u0643\\u0629'", "'\\u0642\\u0627\\u0644\\u0628-\\u0627\\u0644\\u0634\\u0628\\u0643\\u0629'", 
                     "'\\u0641\\u062C\\u0648\\u0629'", "'\\u0636\\u0628\\u0637-\\u0627\\u0644\\u0645\\u062D\\u062A\\u0648\\u0649'", 
                     "'\\u0645\\u062D\\u0627\\u0630\\u0627\\u0629-\\u0627\\u0644\\u0639\\u0646\\u0627\\u0635\\u0631'", 
                     "'\\u0645\\u062D\\u0627\\u0630\\u0627\\u0629-\\u0630\\u0627\\u062A\\u064A\\u0629'", 
                     "'\\u062A\\u0631\\u062A\\u064A\\u0628'", "'\\u0644\\u0648\\u0646'", 
                     "'\\u062E\\u0644\\u0641\\u064A\\u0629'", "'\\u0635\\u0648\\u0631\\u0629-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
                     "'\\u0644\\u0648\\u0646-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
                     "'\\u062D\\u062C\\u0645-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
                     "'\\u062A\\u0643\\u0631\\u0627\\u0631-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
                     "'\\u062A\\u062B\\u0628\\u064A\\u062A-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
                     "'\\u0642\\u0635-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
                     "'\\u0634\\u0641\\u0627\\u0641\\u064A\\u0629'", "'\\u0638\\u0644-\\u0627\\u0644\\u0635\\u0646\\u062F\\u0648\\u0642'", 
                     "'\\u0646\\u0648\\u0639-\\u0627\\u0644\\u062E\\u0637'", 
                     "'\\u062D\\u062C\\u0645-\\u0627\\u0644\\u062E\\u0637'", 
                     "'\\u062B\\u0642\\u0644-\\u0627\\u0644\\u062E\\u0637'", 
                     "'\\u0646\\u0645\\u0637-\\u0627\\u0644\\u062E\\u0637'", 
                     "'\\u0645\\u062D\\u0627\\u0630\\u0627\\u0629-\\u0627\\u0644\\u0646\\u0635'", 
                     "'\\u0632\\u062E\\u0631\\u0641\\u0629-\\u0627\\u0644\\u0646\\u0635'", 
                     "'\\u062A\\u062D\\u0648\\u064A\\u0644-\\u0627\\u0644\\u0646\\u0635'", 
                     "'\\u0638\\u0644-\\u0627\\u0644\\u0646\\u0635'", "'\\u0625\\u0632\\u0627\\u062D\\u0629-\\u0627\\u0644\\u0646\\u0635'", 
                     "'\\u0627\\u0631\\u062A\\u0641\\u0627\\u0639-\\u0627\\u0644\\u0633\\u0637\\u0631'", 
                     "'\\u062A\\u0628\\u0627\\u0639\\u062F-\\u0627\\u0644\\u0623\\u062D\\u0631\\u0641'", 
                     "'\\u062A\\u0628\\u0627\\u0639\\u062F-\\u0627\\u0644\\u0643\\u0644\\u0645\\u0627\\u062A'", 
                     "'\\u0627\\u0644\\u0645\\u0633\\u0627\\u062D\\u0629-\\u0627\\u0644\\u0628\\u064A\\u0636\\u0627\\u0621'", 
                     "'\\u0627\\u062A\\u062C\\u0627\\u0647-\\u0627\\u0644\\u0643\\u062A\\u0627\\u0628\\u0629'", 
                     "'\\u0646\\u0645\\u0637-\\u0627\\u0644\\u0643\\u062A\\u0627\\u0628\\u0629'", 
                     "'\\u0627\\u0646\\u062D\\u0646\\u0627\\u0621-\\u0627\\u0644\\u0625\\u0637\\u0627\\u0631'", 
                     "'\\u0633\\u0645\\u0643-\\u0627\\u0644\\u0625\\u0637\\u0627\\u0631'", 
                     "'\\u0646\\u0645\\u0637-\\u0627\\u0644\\u0625\\u0637\\u0627\\u0631'", 
                     "'\\u0644\\u0648\\u0646-\\u0627\\u0644\\u0625\\u0637\\u0627\\u0631'", 
                     "'\\u062E\\u0637-\\u062E\\u0627\\u0631\\u062C\\u064A'", 
                     "'\\u0623\\u0639\\u0644\\u0649'", "'\\u0623\\u0633\\u0641\\u0644'", 
                     "'\\u064A\\u0645\\u064A\\u0646'", "'\\u064A\\u0633\\u0627\\u0631'", 
                     "'@\\u0648\\u0633\\u0627\\u0626\\u0637'", "'\\u0646\\u0645\\u0637-\\u0627\\u0644\\u0642\\u0627\\u0626\\u0645\\u0629'", 
                     "'\\u062F\\u0645\\u062C-\\u0627\\u0644\\u062D\\u062F\\u0648\\u062F'", 
                     "'\\u062A\\u0646\\u0633\\u064A\\u0642-\\u0627\\u0644\\u062C\\u062F\\u0648\\u0644'", 
                     "'\\u0645\\u0643\\u0627\\u0646-\\u0627\\u0644\\u0639\\u0646\\u0648\\u0627\\u0646'", 
                     "'\\u0645\\u0631\\u0634\\u062D'", "'\\u0645\\u0631\\u0634\\u062D-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
                     "'\\u062D\\u0648\\u0645'", "'\\u0646\\u0634\\u0637'", 
                     "'\\u062A\\u0631\\u0643\\u064A\\u0632'", "'\\u062A\\u0645-\\u0632\\u064A\\u0627\\u0631\\u062A\\u0647'", 
                     "'\\u0645\\u0641\\u0639\\u0644'", "'\\u0645\\u0639\\u0637\\u0644'", 
                     "'\\u0645\\u062D\\u062F\\u062F'", "'\\u0642\\u0628\\u0644'", 
                     "'\\u0628\\u0639\\u062F'", "'\\u0646\\u0635-\\u0645\\u0624\\u0642\\u062A'", 
                     "'\\u062A\\u062D\\u062F\\u064A\\u062F'", "'\\u0648\\u0631\\u0627\\u062B\\u0629'", 
                     "'\\u0623\\u0648\\u0644\\u064A'", "'\\u063A\\u064A\\u0631 \\u0645\\u062D\\u062F\\u062F'", 
                     "'\\u0644\\u0627-\\u0634\\u064A\\u0621'", "'\\u062A\\u0644\\u0642\\u0627\\u0626\\u064A'", 
                     "'\\u0645\\u0631\\u0643\\u0632'", "'\\u0645\\u062A\\u0635\\u0644'", 
                     "'\\u0645\\u0642\\u0637\\u0639'", "'\\u0645\\u0646\\u0642\\u0637'", 
                     "'\\u0645\\u0632\\u062F\\u0648\\u062C'", "'\\u0645\\u062E\\u0641\\u064A'", 
                     "'\\u0643\\u062A\\u0644\\u0629'", "'\\u0633\\u0637\\u0631\\u064A'", 
                     "'\\u0645\\u0631\\u0648\\u0646\\u0629'", "'\\u0645\\u0637\\u0644\\u0642'", 
                     "'\\u0646\\u0633\\u0628\\u064A'", "'\\u062B\\u0627\\u0628\\u062A'", 
                     "'\\u0644\\u0627\\u0635\\u0642'", "'\\u0635\\u0641'", 
                     "'\\u0639\\u0645\\u0648\\u062F'", "'\\u0644\\u0641'", 
                     "'\\u0645\\u0624\\u0634\\u0631'", "'\\u0639\\u0631\\u064A\\u0636'", 
                     "'\\u0645\\u0627\\u0626\\u0644'", "'\\u0647\\u0627\\u0645'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\u0631\\u0627\\u0628\\u0637'", "'\\u0646\\u0638\\u0627\\u0645-\\u0631_\\u062C_\\u0628'", 
                     "'\\u0646\\u0638\\u0627\\u0645-\\u0631_\\u062C_\\u0628_\\u0627'", 
                     "'\\u062D\\u0633\\u0627\\u0628'", "'\\u0645\\u062A\\u063A\\u064A\\u0631'", 
                     "'\\u062A\\u062F\\u0648\\u064A\\u0631'", "'\\u062A\\u0643\\u0628\\u064A\\u0631'", 
                     "'\\u062A\\u063A\\u0628\\u064A\\u0634'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'{'", "'}'", "':'", "'\\u061B'", "'\\u060C'", 
                     "'.'", "'#'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'>'", "'<'", "'~'", "'!'", "'::'" ]

    symbolicNames = [ "<INVALID>", "DISPLAY", "POSITION", "WIDTH", "HEIGHT", 
                      "MAX_WIDTH", "MIN_WIDTH", "MAX_HEIGHT", "MIN_HEIGHT", 
                      "MARGIN", "PADDING", "BORDER", "VISIBILITY", "OVERFLOW", 
                      "Z_INDEX", "BOX_SIZING", "FLEX", "FLEX_DIR", "FLEX_WRAP", 
                      "FLEX_GROW", "FLEX_SHRINK", "GRID", "GRID_TEMPLATE", 
                      "GAP", "JUSTIFY_CONT", "ALIGN_ITEMS", "ALIGN_SELF", 
                      "ORDER", "COLOR", "BACKGROUND", "BG_IMAGE", "BG_COLOR", 
                      "BG_SIZE", "BG_REPEAT", "BG_ATTACH", "BG_CLIP", "OPACITY", 
                      "BOX_SHADOW", "FONT_FAMILY", "FONT_SIZE", "FONT_WEIGHT", 
                      "FONT_STYLE", "TEXT_ALIGN", "TEXT_DECOR", "TEXT_TRANS", 
                      "TEXT_SHADOW", "TEXT_INDENT", "LINE_HEIGHT", "LETTER_SPACING", 
                      "WORD_SPACING", "WHITE_SPACE", "DIRECTION", "WRITING_MODE", 
                      "BORDER_RADIUS", "BORDER_WIDTH", "BORDER_STYLE", "BORDER_COLOR", 
                      "OUTLINE", "TOP", "BOTTOM", "RIGHT", "LEFT", "MEDIA", 
                      "LIST_STYLE", "BORDER_COLLAPSE", "TABLE_LAYOUT", "CAPTION_SIDE", 
                      "FILTER", "BACKDROP_FILT", "HOVER", "ACTIVE", "FOCUS", 
                      "VISITED", "ENABLED", "DISABLED", "CHECKED", "BEFORE", 
                      "AFTER", "PLACEHOLDER", "SELECTION", "INHERIT", "INITIAL", 
                      "UNSET", "NONE", "AUTO", "CENTER", "SOLID", "DASHED", 
                      "DOTTED", "DOUBLE", "KW_HIDDEN", "BLOCK", "INLINE", 
                      "FLEX_VALUE", "ABSOLUTE", "RELATIVE", "FIXED", "STICKY", 
                      "ROW", "COLUMN", "WRAP", "POINTER", "BOLD", "ITALIC", 
                      "IMPORTANT", "UNIT", "NUMBER", "HEX_COLOR", "IDENTIFIER", 
                      "STRING", "URL_FUNC", "RGB_FUNC", "RGBA_FUNC", "CALC_FUNC", 
                      "VAR_FUNC", "ROTATE_FUNC", "SCALE_FUNC", "BLUR_FUNC", 
                      "CLOSE_TAG", "OPEN_TAG", "TEXT", "WS", "COMMENT", 
                      "LINE_COMMENT", "LBRACE", "RBRACE", "COLON", "SEMI", 
                      "COMMA", "DOT", "HASH", "LPAREN", "RPAREN", "PLUS", 
                      "MINUS", "STAR", "SLASH", "PERCENT", "GT", "LT", "TILDE", 
                      "BANG", "DBL_COLON" ]

    RULE_document = 0
    RULE_element = 1
    RULE_tagElement = 2
    RULE_statement = 3
    RULE_mediaRule = 4
    RULE_mediaQueryList = 5
    RULE_mediaQuery = 6
    RULE_mediaExpr = 7
    RULE_ruleset = 8
    RULE_selectorList = 9
    RULE_selector = 10
    RULE_combinator = 11
    RULE_compoundSelector = 12
    RULE_simpleSelector = 13
    RULE_pseudoClass = 14
    RULE_pseudoElement = 15
    RULE_declarationList = 16
    RULE_declaration = 17
    RULE_exprModifier = 18
    RULE_property = 19
    RULE_value = 20
    RULE_expr = 21
    RULE_term = 22
    RULE_dimension = 23
    RULE_keywordValue = 24
    RULE_functionCall = 25
    RULE_functionName = 26
    RULE_arguments = 27

    ruleNames =  [ "document", "element", "tagElement", "statement", "mediaRule", 
                   "mediaQueryList", "mediaQuery", "mediaExpr", "ruleset", 
                   "selectorList", "selector", "combinator", "compoundSelector", 
                   "simpleSelector", "pseudoClass", "pseudoElement", "declarationList", 
                   "declaration", "exprModifier", "property", "value", "expr", 
                   "term", "dimension", "keywordValue", "functionCall", 
                   "functionName", "arguments" ]

    EOF = Token.EOF
    DISPLAY=1
    POSITION=2
    WIDTH=3
    HEIGHT=4
    MAX_WIDTH=5
    MIN_WIDTH=6
    MAX_HEIGHT=7
    MIN_HEIGHT=8
    MARGIN=9
    PADDING=10
    BORDER=11
    VISIBILITY=12
    OVERFLOW=13
    Z_INDEX=14
    BOX_SIZING=15
    FLEX=16
    FLEX_DIR=17
    FLEX_WRAP=18
    FLEX_GROW=19
    FLEX_SHRINK=20
    GRID=21
    GRID_TEMPLATE=22
    GAP=23
    JUSTIFY_CONT=24
    ALIGN_ITEMS=25
    ALIGN_SELF=26
    ORDER=27
    COLOR=28
    BACKGROUND=29
    BG_IMAGE=30
    BG_COLOR=31
    BG_SIZE=32
    BG_REPEAT=33
    BG_ATTACH=34
    BG_CLIP=35
    OPACITY=36
    BOX_SHADOW=37
    FONT_FAMILY=38
    FONT_SIZE=39
    FONT_WEIGHT=40
    FONT_STYLE=41
    TEXT_ALIGN=42
    TEXT_DECOR=43
    TEXT_TRANS=44
    TEXT_SHADOW=45
    TEXT_INDENT=46
    LINE_HEIGHT=47
    LETTER_SPACING=48
    WORD_SPACING=49
    WHITE_SPACE=50
    DIRECTION=51
    WRITING_MODE=52
    BORDER_RADIUS=53
    BORDER_WIDTH=54
    BORDER_STYLE=55
    BORDER_COLOR=56
    OUTLINE=57
    TOP=58
    BOTTOM=59
    RIGHT=60
    LEFT=61
    MEDIA=62
    LIST_STYLE=63
    BORDER_COLLAPSE=64
    TABLE_LAYOUT=65
    CAPTION_SIDE=66
    FILTER=67
    BACKDROP_FILT=68
    HOVER=69
    ACTIVE=70
    FOCUS=71
    VISITED=72
    ENABLED=73
    DISABLED=74
    CHECKED=75
    BEFORE=76
    AFTER=77
    PLACEHOLDER=78
    SELECTION=79
    INHERIT=80
    INITIAL=81
    UNSET=82
    NONE=83
    AUTO=84
    CENTER=85
    SOLID=86
    DASHED=87
    DOTTED=88
    DOUBLE=89
    KW_HIDDEN=90
    BLOCK=91
    INLINE=92
    FLEX_VALUE=93
    ABSOLUTE=94
    RELATIVE=95
    FIXED=96
    STICKY=97
    ROW=98
    COLUMN=99
    WRAP=100
    POINTER=101
    BOLD=102
    ITALIC=103
    IMPORTANT=104
    UNIT=105
    NUMBER=106
    HEX_COLOR=107
    IDENTIFIER=108
    STRING=109
    URL_FUNC=110
    RGB_FUNC=111
    RGBA_FUNC=112
    CALC_FUNC=113
    VAR_FUNC=114
    ROTATE_FUNC=115
    SCALE_FUNC=116
    BLUR_FUNC=117
    CLOSE_TAG=118
    OPEN_TAG=119
    TEXT=120
    WS=121
    COMMENT=122
    LINE_COMMENT=123
    LBRACE=124
    RBRACE=125
    COLON=126
    SEMI=127
    COMMA=128
    DOT=129
    HASH=130
    LPAREN=131
    RPAREN=132
    PLUS=133
    MINUS=134
    STAR=135
    SLASH=136
    PERCENT=137
    GT=138
    LT=139
    TILDE=140
    BANG=141
    DBL_COLON=142

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ArabicWebParser.EOF, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArabicWebParser.ElementContext)
            else:
                return self.getTypedRuleContext(ArabicWebParser.ElementContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArabicWebParser.StatementContext)
            else:
                return self.getTypedRuleContext(ArabicWebParser.StatementContext,i)


        def getRuleIndex(self):
            return ArabicWebParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)




    def document(self):

        localctx = ArabicWebParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==62 or ((((_la - 108)) & ~0x3f) == 0 and ((1 << (_la - 108)) & 17320646657) != 0):
                self.state = 58
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [119, 120]:
                    self.state = 56
                    self.element()
                    pass
                elif token in [62, 108, 126, 129, 130, 135, 142]:
                    self.state = 57
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(ArabicWebParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tagElement(self):
            return self.getTypedRuleContext(ArabicWebParser.TagElementContext,0)


        def TEXT(self):
            return self.getToken(ArabicWebParser.TEXT, 0)

        def getRuleIndex(self):
            return ArabicWebParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = ArabicWebParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_element)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [119]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.tagElement()
                pass
            elif token in [120]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.match(ArabicWebParser.TEXT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_TAG(self):
            return self.getToken(ArabicWebParser.OPEN_TAG, 0)

        def CLOSE_TAG(self):
            return self.getToken(ArabicWebParser.CLOSE_TAG, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArabicWebParser.ElementContext)
            else:
                return self.getTypedRuleContext(ArabicWebParser.ElementContext,i)


        def getRuleIndex(self):
            return ArabicWebParser.RULE_tagElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagElement" ):
                listener.enterTagElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagElement" ):
                listener.exitTagElement(self)




    def tagElement(self):

        localctx = ArabicWebParser.TagElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tagElement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(ArabicWebParser.OPEN_TAG)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==119 or _la==120:
                self.state = 70
                self.element()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(ArabicWebParser.CLOSE_TAG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ruleset(self):
            return self.getTypedRuleContext(ArabicWebParser.RulesetContext,0)


        def mediaRule(self):
            return self.getTypedRuleContext(ArabicWebParser.MediaRuleContext,0)


        def getRuleIndex(self):
            return ArabicWebParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = ArabicWebParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [108, 126, 129, 130, 135, 142]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.ruleset()
                pass
            elif token in [62]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.mediaRule()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MediaRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MEDIA(self):
            return self.getToken(ArabicWebParser.MEDIA, 0)

        def mediaQueryList(self):
            return self.getTypedRuleContext(ArabicWebParser.MediaQueryListContext,0)


        def LBRACE(self):
            return self.getToken(ArabicWebParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ArabicWebParser.RBRACE, 0)

        def ruleset(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArabicWebParser.RulesetContext)
            else:
                return self.getTypedRuleContext(ArabicWebParser.RulesetContext,i)


        def getRuleIndex(self):
            return ArabicWebParser.RULE_mediaRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMediaRule" ):
                listener.enterMediaRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMediaRule" ):
                listener.exitMediaRule(self)




    def mediaRule(self):

        localctx = ArabicWebParser.MediaRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mediaRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(ArabicWebParser.MEDIA)
            self.state = 83
            self.mediaQueryList()
            self.state = 84
            self.match(ArabicWebParser.LBRACE)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 108)) & ~0x3f) == 0 and ((1 << (_la - 108)) & 17320640513) != 0):
                self.state = 85
                self.ruleset()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self.match(ArabicWebParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MediaQueryListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mediaQuery(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArabicWebParser.MediaQueryContext)
            else:
                return self.getTypedRuleContext(ArabicWebParser.MediaQueryContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ArabicWebParser.COMMA)
            else:
                return self.getToken(ArabicWebParser.COMMA, i)

        def getRuleIndex(self):
            return ArabicWebParser.RULE_mediaQueryList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMediaQueryList" ):
                listener.enterMediaQueryList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMediaQueryList" ):
                listener.exitMediaQueryList(self)




    def mediaQueryList(self):

        localctx = ArabicWebParser.MediaQueryListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mediaQueryList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.mediaQuery()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==128:
                self.state = 94
                self.match(ArabicWebParser.COMMA)
                self.state = 95
                self.mediaQuery()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

